--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <title>anomalydetection.app | AI-Powered Time Series Anomaly Detection</title>
     <meta name="description" content="State-of-the-art anomaly detection in time series using an advanced proprietary algorithm to identify and alert you of unusual patterns in your data." />
     <meta name="author" content="anomalydetection.app" />
